--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,22 +1,8 @@
 ---
-import "../styles/global.css";
-const pageTitle = "My Astro Learning Blog";
+import BaseLayout from "../layouts/BaseLayout.astro";
+const pageTitle = "Home Page";
 ---
 
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <base href="/tutorial-astro/" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <a href=".">Home</a>
-    <a href="about/">About</a>
-    <a href="blog/">Blog</a>
-
-    <h1>My Astro Site: Jose</h1>
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <h2>My awesome blog subtitle</h2>
+</BaseLayout>
